background image sos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     </head>
     <body>
 
+        <img src='images/background.jpg'>
+
+        <!-- <h1><b>SHOUSHILING</b></h1> -->
+
         <!-- <b>History:</b>
 
         With multiple versions varying from elephant-human-ant to rock-water-bird
@@ -20,7 +24,8 @@
         Will you predict the algorithm like the pros who compete for championship?  
 
         Click here to play and find out! -->
-        
+    
+
         <script src='rps.js'></script>
 
     </body>
