background img + home page text content

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- first commit -->
 
 <!DOCTYPE html>
 <html lang='en'>
@@ -9,21 +8,21 @@
     </head>
     <body>
 
-        <img src='images/background.jpg'>
+        <h1><b>HISTORY</b></h1> 
 
-        <!-- <h1><b>SHOUSHILING</b></h1> -->
+        <h2><p>With multiple versions of the game,<br>
+        varying from elephant-human-ant to rock-water-bird<br>
+        and bear-hunter-ninja, this classic game<br> 
+        has become an international favorite<br>
+        for children and adults alike. It has even<br>
+        given rise to professional tournaments worldwide.<br>
+        Originally named, <i>Shoushiling</i>, the game dates back<br>
+        to 206 BCE China, the era of the Han dynasty.<br></p>
 
-        <!-- <b>History:</b>
+        <p>Will you predict the algorithm,<br>
+        like the pros who compete for championship?<br/></p>
 
-        With multiple versions varying from elephant-human-ant to rock-water-bird
-        and bear-hunter-ninja, this classic game has become an international favorite
-        for children and adults alike. It has even given rise to professional 
-        tournaments worldwide. Originally named, <i>Shoushiling</i>, the game dates 
-        back to 206 BCE China, the era of the Han dynasty.
-
-        Will you predict the algorithm like the pros who compete for championship?  
-
-        Click here to play and find out! -->
+        <p>Click here to play and find out!</h2></p>
     
 
         <script src='rps.js'></script>
