--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <head>
         <meta charset='utf-8'>
         <title>Rock Paper Scissors</title>
-        <link href='style.css' rel='stylesheet'>
+        <link href='index.css' rel='stylesheet'>
     </head>
     <body>
+        <div class='container'>
+            <h1><b>HISTORY</b></h1>
 
-        <h1><b>HISTORY</b></h1> 
+            <h2><p>With multiple versions of the game,<br>
+            varying from elephant-human-ant to rock-water-bird<br>
+            and bear-hunter-ninja, this classic game<br> 
+            has become an international favorite<br>
+            for children and adults alike. It has even<br>
+            given rise to professional tournaments worldwide.<br>
+            Originally named, <i>Shoushiling</i>, the game dates back<br>
+            to 206 BCE China, the era of the Han dynasty.<br></p>
 
-        <h2><p>With multiple versions of the game,<br>
-        varying from elephant-human-ant to rock-water-bird<br>
-        and bear-hunter-ninja, this classic game<br> 
-        has become an international favorite<br>
-        for children and adults alike. It has even<br>
-        given rise to professional tournaments worldwide.<br>
-        Originally named, <i>Shoushiling</i>, the game dates back<br>
-        to 206 BCE China, the era of the Han dynasty.<br></p>
+            <p>Will you predict the algorithm,<br>
+            like the pros who compete for championship?<br/></p>
 
-        <p>Will you predict the algorithm,<br>
-        like the pros who compete for championship?<br/></p>
-
-        <p>Click here to play and find out!</h2></p>
-    
+            <p>Click <a href='rps.html' class='hyperlink'>here</a> to play and find out!</h2></p>
+        </div>
 
         <script src='rps.js'></script>
 
