--- a/rps.html
+++ b/rps.html
@@ -10,20 +10,20 @@
     </head>
     <body>
         <h1><b>SHOUSHILING</b></h1>
-        <div id='weapons'>    
+        <div class='weapons'>    
             <h2>
                 <img
                 src='images/rock.jpeg'
                 alt='picture of a rock'
-                id='rock'>
+                class='rock'>
                 <img
                 src='images/paper.jpeg'
                 alt='picture of a piece of paper'
-                id='paper'>
+                class='paper'>
                 <img
                 src='images/scissors.jpeg'
                 alt='picture of a pair of scissors'
-                id='scissors'>
+                class='scissors'>
             </h2>
         </div>
     
