gotta end the night somewhere

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               like the pros who compete for championship?<br />
             </p>
             <p>
-              Click <a href="rps.html" class="hyperlink">here</a> to play and find
+              Click <a href='rps.html' class='hyperlink'>here</a> to play and find
               out!
             </p>
         </div> 
