--- a/rps.html
+++ b/rps.html
@@ -10,22 +10,22 @@
     </head>
     <body>
         <h1><b>SHOUSHILING</b></h1>
-        <div class='weapons'>    
-            <h2>
+        <div id='weapons'>    
                 <img
                 src='images/rock.jpeg'
                 alt='picture of a rock'
-                class='rock'>
+                id='rock'>
                 <img
                 src='images/paper.jpeg'
                 alt='picture of a piece of paper'
-                class='paper'>
+                id='paper'>
                 <img
                 src='images/scissors.jpeg'
                 alt='picture of a pair of scissors'
-                class='scissors'>
-            </h2>
+                id='scissors'>
         </div>
+
+        <button id='button'>Restart Game</button>
     
 
         <script src='rps.js'></script>
