uncaught reference error sos

--- a/rps.html
+++ b/rps.html
@@ -1,5 +1,3 @@
-<!-- play rps here -->
-
 
 <!DOCTYPE html>
 <html lang='en'>
@@ -24,6 +22,9 @@
                 alt='picture of a pair of scissors'
                 id='scissors'>
         </div>
+
+        <div id='results-display'></div>
+
 
         <button id='button'>Restart Game</button>
     
